--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           name: test-report
           path: build/reports/tests/test
-      - name: 도커허브에 로그인
+      - name: 도커허브에 로그인할게요
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USER_NAME }}
