--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,35 +6,44 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest # 작업이 실행될 환경
+    runs-on: ubuntu-latest
+
     steps:
-      - name: 체크아웃
+      - name: 📦 소스코드 체크아웃
         uses: actions/checkout@v3
-      - name: JDK 17 사용
+
+      - name: ☕ JDK 17 설정
         uses: actions/setup-java@v3
         with:
           java-version: "17"
           distribution: "temurin"
-      - name: Gradle Wrapper 실행 권한 추가
+
+      - name: 🛠 Gradle Wrapper 실행 권한 부여
         run: chmod +x gradlew
-      - name: Gradle로 빌드(CI)
+
+      - name: ⚙️ Gradle 빌드 실행
         run: ./gradlew build --info --stacktrace
-      - name: Upload test report
+
+      - name: 🧪 테스트 실패시 리포트 업로드
         if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: test-report
           path: build/reports/tests/test
-      - name: 도커허브에 로그인할게요
+
+      - name: 🔐 도커허브 로그인
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USER_NAME }}
           password: ${{ secrets.DOCKER_USER_PW }}
-      - name: 이미지 빌드
+
+      - name: 🧱 도커 이미지 빌드
         run: docker build -t ${{ secrets.DOCKER_USER_NAME }}/${{ secrets.DOCKER_IMAGE_NAME }}-be .
-      - name: 도커허브에 이미지 푸시
+
+      - name: 📤 도커 이미지 푸시
         run: docker push ${{ secrets.DOCKER_USER_NAME }}/${{ secrets.DOCKER_IMAGE_NAME }}-be
-      - name: AWS EC2에 ssh 접속 후 배포
+
+      - name: 🚀 EC2에 SSH 접속 후 배포
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.AWS_IP }}
@@ -42,5 +51,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.AWS_KEY }}
           script: |
+            echo "${{ secrets.DOCKER_USER_PW }}" | docker login -u "${{ secrets.DOCKER_USER_NAME }}" --password-stdin
             docker pull ${{ secrets.DOCKER_USER_NAME }}/${{ secrets.DOCKER_IMAGE_NAME }}-be
-            docker-compose up -d
+            docker-compose down
+            docker-compose up -d --build
