--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,18 +55,16 @@ jobs:
 
             cd ~/mlikyway
 
-            cat <<EOF > .env
-SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }}
-SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME }}
-SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }}
-SPRING_SECURITY_USER=${{ secrets.SPRING_SECURITY_USER }}
-SPRING_SECURITY_PASSWORD=${{ secrets.SPRING_SECURITY_PASSWORD }}
-SPRING_SECURITY_ENCRYPT_KEY=${{ secrets.SPRING_SECURITY_ENCRYPT_KEY }}
-SPRING_CREDENTIALS_ACCESSKEY=${{ secrets.SPRING_CREDENTIALS_ACCESSKEY }}
-SPRING_CREDENTIALS_SECRETKEY=${{ secrets.SPRING_CREDENTIALS_SECRETKEY }}
-SPRING_CREDENTIALS_BUCKETNAME=${{ secrets.SPRING_CREDENTIALS_BUCKETNAME }}
-SPRING_SECRET_URL=${{ secrets.SPRING_SECRET_URL }}
-EOF
+            echo "SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }}" > .env
+            echo "SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME }}" >> .env
+            echo "SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }}" >> .env
+            echo "SPRING_SECURITY_USER=${{ secrets.SPRING_SECURITY_USER }}" >> .env
+            echo "SPRING_SECURITY_PASSWORD=${{ secrets.SPRING_SECURITY_PASSWORD }}" >> .env
+            echo "SPRING_SECURITY_ENCRYPT_KEY=${{ secrets.SPRING_SECURITY_ENCRYPT_KEY }}" >> .env
+            echo "SPRING_CREDENTIALS_ACCESSKEY=${{ secrets.SPRING_CREDENTIALS_ACCESSKEY }}" >> .env
+            echo "SPRING_CREDENTIALS_SECRETKEY=${{ secrets.SPRING_CREDENTIALS_SECRETKEY }}" >> .env
+            echo "SPRING_CREDENTIALS_BUCKETNAME=${{ secrets.SPRING_CREDENTIALS_BUCKETNAME }}" >> .env
+            echo "SPRING_SECRET_URL=${{ secrets.SPRING_SECRET_URL }}" >> .env
 
             docker pull ${{ secrets.DOCKER_USER_NAME }}/${{ secrets.DOCKER_IMAGE_NAME }}
             docker-compose down
