--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,11 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'org.hibernate:hibernate-core:6.4.4.Final'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+	testImplementation 'org.mockito:mockito-core:5.11.0'
+	testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
+
 
 }
 jar {
@@ -48,4 +53,17 @@ jar {
 tasks.named('test') {
 	useJUnitPlatform()
 	ignoreFailures = true // 테스트 실패해도 빌드 자체는 성공
+}
+test {
+	useJUnitPlatform()
+}
+sourceSets {
+	test {
+		java {
+			srcDirs = ['src/test/java']  // 테스트 소스 코드 위치
+		}
+		resources {
+			srcDirs = ['src/test/resources']
+		}
+	}
 }
