--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.jpa.open-in-view=false
 spring.port=9000
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled: false
 
 spring.datasource.hikari.connection-timeout=30000 
 spring.datasource.hikari.idle-timeout=600000     
